--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 body h1 {
     color: aqua;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    animation: animate 5s linear infinite;
+    animation: animate 5s linear infinite, bouncy 5s infinite linear;
 }
 
 
@@ -52,6 +52,30 @@ body h1 {
     }
     50% {
         filter: hue-rotate(360deg)
+    }
+}
+
+@keyframes bouncy {
+    0% {
+        top: 0em
+    }
+    40% {
+        top: 0em
+    }
+    43% {
+        top: -0.9em
+    }
+    46% {
+        top: 0em
+    }
+    48% {
+        top: -0.4em
+    }
+    50% {
+        top: 0em
+    }
+    100% {
+        top: 0em;
     }
 }
 
