--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 body h1 {
     color: aqua;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    animation: animate 5s linear infinite, bouncy 5s infinite linear;
+    animation: animate 5s linear infinite, bouncy 5s linear infinite;
 }
 
 
