--- a/style.css
+++ b/style.css
@@ -57,22 +57,22 @@ body h1 {
 
 @keyframes bouncy {
     0% {
-        top: 0em
+        top: 0em;
     }
     40% {
-        top: 0em
+        top: 0em;
     }
     43% {
-        top: -0.9em
+        top: -0.9em;
     }
     46% {
-        top: 0em
+        top: 0em;
     }
     48% {
-        top: -0.4em
+        top: -0.4em;
     }
     50% {
-        top: 0em
+        top: 0em;
     }
     100% {
         top: 0em;
