--- a/style.css
+++ b/style.css
@@ -12,18 +12,19 @@ body {
     min-height: 100vh;
     background: #031321;
     flex-direction: column;
+    overflow: 0;
 }
 
 body h1 {
     color: aqua;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    animation: animate 5s linear infinite, bouncy 5s linear infinite;
+    animation: animate 5s linear infinite;
 }
 
 
 /*Scroll bar*/
 
-::-webkit-scrollbar {
+ ::-webkit-scrollBar {
     width: 0;
 }
 
@@ -55,30 +56,6 @@ body h1 {
     }
 }
 
-@keyframes bouncy {
-    0% {
-        top: 0em;
-    }
-    40% {
-        top: 0em;
-    }
-    43% {
-        top: -0.9em;
-    }
-    46% {
-        top: 0em;
-    }
-    48% {
-        top: -0.4em;
-    }
-    50% {
-        top: 0em;
-    }
-    100% {
-        top: 0em;
-    }
-}
-
 #progressBar:before,
 #progressBar:after {
     content: "";
@@ -106,6 +83,7 @@ a {
     overflow: hidden;
     transition: 0.5s;
     -webkit-box-reflect: below1px linear-gradient(transparent, #0005);
+    animation: animate 5s linear infinite;
 }
 
 a:hover {
