--- a/style.css
+++ b/style.css
@@ -52,7 +52,8 @@ body h1 {
         filter: hue-rotate(0deg)
     }
     50% {
-        filter: hue-rotate(360deg)
+        filter: hue-rotate(360deg);
+        transform: scale(1.2);
     }
 }
 
